import { Bot, type Context } from "https://deno.land/x/grammy/mod.ts";
import { serve } from "https://deno.land/std/http/server.ts";
import { NotificationGrpcServer } from "./grpc_server.ts";

interface Receipt {
    orderId: string;
    items: {
        name: string;
        price: number;
        quantity: number;
    }[];
    total: number;
    customerName: string;
    date: string;
}

interface Notification {
    type: "order_status" | "payment_status" | "delivery_status";
    message: string;
    orderId: string;
}

class TelegramNotificationService {
    private bot: Bot;
    private chatIds: Set<number> = new Set();

    constructor(token: string) {
        this.bot = new Bot(token);
        this.setupBot();
    }

    private setupBot() {
        this.bot.command("start", (ctx) => {
            this.chatIds.add(ctx.chat.id);
            ctx.reply("–ë–æ—Ç —É—Å–ø–µ—à–Ω–æ –ø–æ–¥–∫–ª—é—á–µ–Ω! –í—ã –±—É–¥–µ—Ç–µ –ø–æ–ª—É—á–∞—Ç—å —É–≤–µ–¥–æ–º–ª–µ–Ω–∏—è –æ –∑–∞–∫–∞–∑–∞—Ö.");
        });

        this.bot.command("id", (ctx) => {
            ctx.reply(`–í–∞—à Chat ID: ${ctx.chat.id}`);
        });
    }

    async sendReceipt(chatId: number, receipt: Receipt) {
        const message = this.formatReceipt(receipt);
        await this.bot.api.sendMessage(chatId, message, { parse_mode: "HTML" });
    }

    async sendNotification(chatId: number, notification: Notification) {
        const message = this.formatNotification(notification);
        await this.bot.api.sendMessage(chatId, message, { parse_mode: "HTML" });
    }

    private formatReceipt(receipt: Receipt): string {
        let message = `üßæ <b>–ß–µ–∫ #${receipt.orderId}</b>\n`;
        message += `üë§ –ü–æ–∫—É–ø–∞—Ç–µ–ª—å: ${receipt.customerName}\n`;
        message += `üìÖ –î–∞—Ç–∞: ${receipt.date}\n\n`;
        message += `üìã –¢–æ–≤–∞—Ä—ã:\n`;
        
        receipt.items.forEach(item => {
            message += `- ${item.name} x${item.quantity} = ${item.price * item.quantity}‚ÇΩ\n`;
        });
        
        message += `\nüí∞ –ò—Ç–æ–≥–æ: ${receipt.total}‚ÇΩ`;
        return message;
    }

    private formatNotification(notification: Notification): string {
        return `üîî <b>–£–≤–µ–¥–æ–º–ª–µ–Ω–∏–µ</b>\nüì¶ –ó–∞–∫–∞–∑ #${notification.orderId}\n${notification.message}`;
    }

    startBot() {
        this.bot.start();
    }
}

// –°–æ–∑–¥–∞–µ–º —ç–∫–∑–µ–º–ø–ª—è—Ä —Å–µ—Ä–≤–∏—Å–∞
const notificationService = new TelegramNotificationService("7452367801:AAHq3HmhCNI7zttlMUhnv24UShtL0NGK1Xo");

// –í –∫–æ–Ω—Ü–µ —Ñ–∞–π–ª–∞ –∑–∞–º–µ–Ω–∏–º —Å—Ç–∞—Ä—ã–π –∫–æ–¥ –∑–∞–ø—É—Å–∫–∞ –Ω–∞:
const startServers = async () => {
    // –ó–∞–ø—É—Å–∫–∞–µ–º HTTP —Å–µ—Ä–≤–µ—Ä
    serve({
        port: 3000,
        handler: async (request: Request) => {
            if (request.method !== "POST") {
                return new Response("Method not allowed", { status: 405 });
            }

            try {
                const body = await request.json();
                const chatId = body.chatId;

                if (!chatId) {
                    return new Response("Chat ID is required", { status: 400 });
                }

                if (request.url.endsWith("/send-receipt")) {
                    await notificationService.sendReceipt(chatId, body.receipt);
                } else if (request.url.endsWith("/send-notification")) {
                    await notificationService.sendNotification(chatId, body.notification);
                } else {
                    return new Response("Invalid endpoint", { status: 404 });
                }

                return new Response("Message sent successfully", { status: 200 });
            } catch (error) {
                return new Response(`Error: ${error.message}`, { status: 500 });
            }
        },
    });
    console.log("HTTP server started on port 3000");

    // –ó–∞–ø—É—Å–∫–∞–µ–º gRPC —Å–µ—Ä–≤–µ—Ä
    const grpcServer = new NotificationGrpcServer(notificationService);
    await grpcServer.start(50051);

    // –ó–∞–ø—É—Å–∫–∞–µ–º –±–æ—Ç–∞
    notificationService.startBot();
    console.log("Telegram bot started");
};

startServers();